--- a/.github/workflows/publish-small-to-dockerhub.yml
+++ b/.github/workflows/publish-small-to-dockerhub.yml
@@ -20,6 +20,13 @@ jobs:
           platforms: amd64
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Clone sub repos
+        env:
+          GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no"
+        run: |
+          eval "$(ssh-agent -s)"
+          git submodule init
+          git submodule update
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
