fix on build - 2

--- a/small-docker/Dockerfile
+++ b/small-docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:20.04 as ar4k-builder
 RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y openjdk-11-jdk
-COPY . /ar4kAgent
+COPY ./.. /ar4kAgent
 WORKDIR /ar4kAgent
 RUN ls && chmod +x gradlew
 RUN ./gradlew clean :opcuad:distTar -x test -Dorg.gradle.jvmargs="-Xms512M -Xmx4G" --info
