--- a/.github/workflows/publish-small-to-github-registry.yml
+++ b/.github/workflows/publish-small-to-github-registry.yml
@@ -36,7 +36,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./small-docker
+          context: .
+          file: Dockerfile.small
           platforms: linux/amd64
           push: true
           tags: ghcr.io/rossonet/opcuad-small:latest
