--- a/.github/workflows/test-on-master-with-gradle.yml
+++ b/.github/workflows/test-on-master-with-gradle.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Print env
       run: echo $GITHUB_ACTOR
     - name: Build and test with Gradle
-      run: ./gradlew test -Dorg.gradle.daemon=false
+      run: ./gradlew test -Dorg.gradle.daemon=false --info --stacktrace
